Successfully call models through api
