# server/main.py
@@ -8,9 +8,8 @@ import utils.path_fixes as pf
 import config
 from utils.f import ifnone
 
-from data_processing import Indexes, ContextIndexes, CorpusDataWrapper, ConvenienceCorpus
+from data_processing import from_model
 from transformer_details import from_pretrained
-
 
 app = connexion.FlaskApp(__name__, static_folder="client/dist", specification_dir=".")
 flask_app = app.app
@@ -19,21 +18,6 @@ CORS(flask_app)
 parser = argparse.ArgumentParser(formatter_class=argparse.ArgumentDefaultsHelpFormatter)
 parser.add_argument("--debug", action="store_true", help=" Debug mode")
 parser.add_argument("--port", default=5555, help="Port to run the app. ")
-
-# NOTE: Connexion runs all global code twice. We need to load the info on the second pass of the app instantiating, not the first.
-class FaissLoader:
-    def __init__(self):
-        self.embedding_faiss = None
-        self.context_faiss = None
-        self.corpus = None
-
-    def load_info(self):
-        """Allow values to have default NONE, load all at once after first load of flask"""
-        self.embedding_faiss = Indexes(config.EMBEDDING_FAISS)
-        self.context_faiss = ContextIndexes(config.CONTEXT_FAISS)
-        self.corpus = CorpusDataWrapper(config.CORPUS)
-
-faiss_loader = FaissLoader()
 
 # Flask main routes
 @app.route("/")
@@ -49,19 +33,17 @@ def send_static_client(path):
     """
     return send_from_directory(str(pf.CLIENT_DIST), path)
 
-
-# ======================================================================
-## INITIALIZATION OF MODEL ##
-# ======================================================================
-details_data = from_pretrained(config.MODEL_VERSION)
-
 # ======================================================================
 ## CONNEXION API ##
 # ======================================================================
 def get_attention_and_meta(**request):
+    model = request["model"]
+    details = from_pretrained(model)
+
     sentence = request["sentence"]
     layer = int(request["layer"])
-    deets = details_data.att_from_sentence(sentence)
+
+    deets = details.att_from_sentence(sentence)
 
     return deets.to_old_json(layer + 1) # CHANGE +1 WHEN FRONTEND FIXED
 
@@ -73,25 +55,34 @@ def update_masked_attention(**request):
     Object: {"a" : {"sentence":__, "mask_inds"}, "b" : {...}}
     """
     payload = request["payload"]
+
+    model = payload['model']
+    details = from_pretrained(model)
+
     tokens = payload["tokens"]
     sentence = payload["sentence"]
     mask = payload["mask"]
     layer = int(payload["layer"])
 
-    MASK = details_data.aligner.mask_token
+    MASK = details.aligner.mask_token
     mask_tokens = lambda toks, maskinds: [
         t if i not in maskinds else ifnone(MASK, t) for (i, t) in enumerate(toks)
     ]
 
-    tokens_a = mask_tokens(tokens, mask)
+    token_inputs = mask_tokens(tokens, mask)
 
-    deets = details_data.att_from_tokens(tokens, sentence)
+    deets = details.att_from_tokens(token_inputs, sentence)
     out = deets.to_old_json(layer + 1) # CHANGE THIS
     return out
 
 
-def woz_nearest_embedding_search(**request):
+def nearest_embedding_search(**request):
     """Return the token text and the metadata in JSON"""
+    model = request["model"]
+    corpus = request["corpus"]
+    details = from_pretrained(model)
+    cc = from_model(model, corpus)
+
     q = np.array(request["embedding"]).reshape((1, -1)).astype(np.float32)
     layer = int(request["layer"])
     heads = list(map(int, list(set(request["heads"]))))
@@ -99,16 +90,22 @@ def woz_nearest_embedding_search(**request):
 
     layer = layer # CHANGE THIS
 
-    nearest_dists, nearest_idxs = faiss_loader.embedding_faiss.search(layer, q, k)
+    out = cc.search_embeddings(layer, q, k)
 
-    out = faiss_loader.corpus.find2d(nearest_idxs)[0]
+    # nearest_dists, nearest_idxs = faiss_loader.embedding_faiss.search(layer, q, k)
+    # out = faiss_loader.corpus.find2d(nearest_idxs)[0]
 
     return_obj = [o.to_json(layer, heads) for o in out]
     return return_obj
 
 
-def woz_nearest_context_search(**request):
+def nearest_context_search(**request):
     """Return the token text and the metadata in JSON"""
+    model = request["model"]
+    corpus = request["corpus"]
+    details = from_pretrained(model)
+    cc = from_model(model, corpus)
+
     q = np.array(request["context"]).reshape((1, -1)).astype(np.float32)
     layer = int(request["layer"])
     heads = list(map(int, list(set(request["heads"]))))
@@ -116,9 +113,10 @@ def woz_nearest_context_search(**request):
 
     layer = layer + 1 # CHANGE THIS
 
-    nearest_dists, nearest_idxs = faiss_loader.context_faiss.search(layer, heads, q, k)
+    out = cc.search_contexts(layer, heads, q, k)
+    # nearest_dists, nearest_idxs = faiss_loader.context_faiss.search(layer, heads, q, k)
 
-    out = faiss_loader.corpus.find2d(nearest_idxs)[0]
+    # out = faiss_loader.corpus.find2d(nearest_idxs)[0]
     return_obj = [o.to_json(layer, heads) for o in out]
 
     return return_obj
@@ -127,9 +125,9 @@ app.add_api("swagger.yaml")
 
 # Setup code
 if __name__ != "__main__":
-    print("SETTING UP")
-    faiss_loader.load_info()
-    print("AFTER SETUP")
+    print("SETTING UP ENDPOINTS")
+    # faiss_loader.load_info()
+    # print("AFTER SETUP")
 
 # Then deploy app
 else:
